--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,15 +1,15 @@
 name: build-test
 
-on:
-  pull_request:
-    paths-ignore:
-      - '**.md'
-  push:
-    branches:
-      - main
-      - releases/*
-    paths-ignore:
-      - '**.md'
+on: [push]
+  #pull_request:
+  #  paths-ignore:
+  #    - '**.md'
+  #push:
+  # branches:
+  #    - main
+  #   - releases/*
+  # paths-ignore:
+  #   - '**.md'
 
 jobs:
   build:
@@ -24,11 +24,25 @@ jobs:
         with:
           node-version: 16.x
           cache: npm
-      - working-directory: ./Aula 5/server
+      - working-directory: ./Aula 4/client
         run: npm install
-      - working-directory: ./Aula 5/server
+      - working-directory: ./Aula 4/client
         run: npm run test
-      - working-directory: ./Aula 5/client
+      - working-directory: ./Aula 4/client
+        run: npm run build
+      - working-directory: ./Aula 4/server
         run: npm install
-      - working-directory: ./Aula 5/client
+      - working-directory: ./Aula 4/server
         run: npm run test
+  cypress-run:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Cypress run
+        uses: cypress-io/github-actions@v2
+         with:
+          working-directory: ./Aula 4/ui-testing
+          build: npm run build
+          start: npm start
+
