--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -20,7 +20,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Setup node 16
-        uses: actions/setup-node@v2
+        uses: actions/cache
         with:
           node-version: 16.x
           cache: npm
