--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -20,10 +20,11 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Setup node 16
-        uses: actions/cache-node@v2
+        uses: actions/setup-node@v2
         with:
           node-version: 16.x
           cache: npm
+
       - working-directory: ./Aula 4/client
         run: npm install
       - working-directory: ./Aula 4/client
@@ -42,7 +43,7 @@ jobs:
       - name: Cypress run
         uses: cypress-io/github-action@v2
         with:
-          working-directory: ./Aula 4/ui-testing
+          working-directory: ./Aula 4/ui-testing/cypress/integration
           build: npm run build
           start: npm start
 
