--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Cypress run
         uses: cypress-io/github-action@v2
         with:
-          working-directory: ./Aula 4/ui-testing/cypress/integration
+          working-directory: ./Aula 4/ui-testing/src
           build: npm run build
           start: npm start
 
