Atividade aulas 5 e 6: Custom Commands + CI Parte 1:(ok) Parte 2: [Nono commit-teste] com solucao para parte 2 - Update do arquivo actions.yml

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Cypress run
         uses: cypress-io/github-action@v2
         with:
-          working-directory: ./Aula 4/ui-testing/src
+          working-directory: ./Users/vntfaba/Desktop/Curso-testes-automatizados_FORK/curso-testes-automatizados/Aula 4/ui-testing/
           build: npm run build
           start: npm start
 
