Atividade aulas 5 e 6: Custom Commands + CI Parte 1:(ok) Parte 2: [16 commit-teste] com solucao para parte 2 - Update do arquivo actions.yml

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -16,7 +16,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest]
+        os: [macos-latest]
     steps:
       - uses: actions/checkout@v2
       - name: Setup node 16
@@ -24,7 +24,17 @@ jobs:
         with:
           node-version: 16.x
           cache: npm
-          
+      
+      - working-directory: ./Aula 5/client
+        run: npm install
+      - working-directory: ./Aula 5/client
+        run: npm run test
+      - working-directory: ./Aula 5/client
+        run: npm run build
+      - working-directory: ./Aula 5/server
+        run: npm install
+      - working-directory: ./Aula 5/server
+        run: npm run test
   cypress-run:
     runs-on: ubuntu-latest
     steps:
